--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
-<head>
-
-</head>
 <body>
+<script>
+function openGroupama() {
+  var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
+  // iOS
+  if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+    window.location = "cs-fr.groupama.tierspayant://open";
+    setTimeout(function() {
+      // App Store fallback
+      window.location = "https://apps.apple.com/app/idXXXXXXXXX"; 
+    }, 1500);
+  } 
+  // Android
+  else if (/android/i.test(userAgent)) {
+    window.location = "intent://open#Intent;scheme=cs-fr.groupama.tierspayant;package=com.groupama.tierspayant;end";
+  } 
+  // Desktop fallback
+  else {
+    window.location = "https://www.groupama.fr"; 
+  }
+}
+</script>
 
-<h2>
-	<a href="intent://open#Intent;scheme=cs-com.groupama.tiersPayant;package=com.groupama.tiersPayant;end">
-  Open Groupama et moi 5
-</a>
-</h2>
+<button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
