--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ function openGroupama() {
     window.location = "cs-fr.groupama.tierspayant://open";
     setTimeout(function() {
       // App Store fallback
-      window.location = "https://apps.apple.com/app/idXXXXXXXXX"; 
+      window.location = "https://apps.apple.com/app/id1324024096"; 
     }, 1500);
   } 
   // Android
@@ -17,13 +17,14 @@ function openGroupama() {
   } 
   // Desktop fallback
   else {
-    window.location = "https://www.groupama.fr"; 
+    window.location = "https://espaceclient.groupama.fr/"; 
   }
 }
 </script>
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
