--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@ function openGroupama() {
   } 
   // Desktop fallback
   else {
-    window.location = "https://espaceclient.groupama.fr/"; 
+    window.location = "https://www.groupama.fr/application-mobile/"; 
   }
 }
 </script>
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
