--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ function openGroupama() {
   var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
   // iOS
-  if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+  // if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+  if (true) {
     window.location = "cs-fr.groupama.tierspayant://open";
     setTimeout(function() {
       // App Store fallback
@@ -24,6 +25,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
