--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ function openGroupama() {
   var userAgent = navigator.userAgent || navigator.vendor || window.opera;
   // iOS
   if ((/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) || (userAgent.includes("Mac") && "ontouchend" in document)) {
-    var iframe = document.createElement('iframe');
-    iframe.style.display = 'none';
-    iframe.src = 'cs-fr.groupama.tierspayant://open';
+    var iframe = document.createElement("iframe");
+    iframe.style.display = "none";
+    iframe.src = "cs-fr.groupama.tierspayant://open";
     document.body.appendChild(iframe);
   } 
   // Android
@@ -22,6 +22,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
