--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@ function openGroupama() {
     iframe.style.display = "none";
     iframe.src = "cs-fr.groupama.tierspayant://open";
     document.body.appendChild(iframe);
+
+    setTimeout(function() {
+      // App Store fallback
+      window.location = "https://apps.apple.com/app/id1324024096"; 
+    }, 800);
+    
   } 
   // Android
   else if (/android/i.test(userAgent)) {
@@ -22,6 +28,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
