--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@ function openGroupama() {
   var userAgent = navigator.userAgent || navigator.vendor || window.opera;
   // iOS
   if ((/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) || (userAgent.includes("Mac") && "ontouchend" in document)) {
-    var iframe = document.createElement("iframe");
-    iframe.style.display = "none";
-    iframe.src = "cs-fr.groupama.tierspayant://open";
-    document.body.appendChild(iframe);
-
+    window.location = "cs-fr.groupama.tierspayant://open";
     setTimeout(function() {
       // App Store fallback
       window.location = "https://apps.apple.com/app/id1324024096"; 
-    }, 800);
-    
+    }, 800);    
   } 
   // Android
   else if (/android/i.test(userAgent)) {
@@ -28,6 +23,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
