--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ function openGroupama() {
     window.addEventListener('focus', () => {
       setTimeout(function() {
       // App Store fallback
-      window.location = "https://apps.apple.com/app/id1324024096"; 
+      window.location = "https://apps.apple.com/app/id1324024096";
+      window.close();
       }, 700);    
     });
   } 
@@ -25,6 +26,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
