--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <body>
 <script>
 function openGroupama() {
+  var focusDone = false;
   var userAgent = navigator.userAgent || navigator.vendor || window.opera;
   // iOS
   if ((/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) || (userAgent.includes("Mac") && "ontouchend" in document)) {
     window.location = "cs-fr.groupama.tierspayant://open";
     window.addEventListener('focus', () => {
+      if (focusDone) {
+        return;
+      }
+      focusDone = true;
       setTimeout(function() {
       // App Store fallback
       window.location = "https://apps.apple.com/app/id1324024096";
@@ -26,6 +31,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
