--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ function openGroupama() {
         focusDone = true;
         setTimeout(function() {
         // App Store fallback
-        window.location = "https://apps.apple.com/app/id1324024096";
+        alert(window.location)
+        // window.location = "https://apps.apple.com/app/id1324024096";
         }, 1200);
       }
     });
@@ -29,6 +30,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
