--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ function openGroupama() {
         focusDone = true;
         setTimeout(function() {
         // App Store fallback
-        alert(window.location)
-        // window.location = "https://apps.apple.com/app/id1324024096";
+        window.location = "https://apps.apple.com/app/id1324024096";
         }, 1200);
       }
     });
@@ -30,6 +29,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
