--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ function openGroupama() {
         focusDone = true;
         setTimeout(function() {
         // App Store fallback
-        window.location = "https://apps.apple.com/app/id1324024096";
+        // window.location = "https://apps.apple.com/app/id1324024096";
+        var store = window.open("https://apps.apple.com/app/id1324024096");
+        store.close();
         }, 1200);
       }
     });
@@ -29,6 +31,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
