--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ function openGroupama() {
         // App Store fallback
         // window.location = "https://apps.apple.com/app/id1324024096";
         store.location.href = "https://apps.apple.com/app/id1324024096";
+        window.focus();
         }, 1200);
       }
     });
@@ -31,6 +32,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
