--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@ function openGroupama() {
   // iOS
   if ((/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) || (userAgent.includes("Mac") && "ontouchend" in document)) {
     window.location = "cs-fr.groupama.tierspayant://open";
-    var store = window.open("", "_blank");
-    window.focus();
     window.addEventListener('focus', () => {
       if (!focusDone) {
         focusDone = true;
         setTimeout(function() {
         // App Store fallback
-        // window.location = "https://apps.apple.com/app/id1324024096";
-        store.location.href = "https://apps.apple.com/app/id1324024096";
+        window.location = "https://apps.apple.com/app/id1324024096";
         }, 1200);
       }
     });
@@ -32,6 +29,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
