--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ function openGroupama() {
         window.location = "https://apps.apple.com/app/id1324024096";
         }, 1500);
       } else if (timeout) {
+        alert("aaa");
         clearTimeout(timeout);
       }
     });
@@ -32,6 +33,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
