--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@ function openGroupama() {
   if ((/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) || (userAgent.includes("Mac") && "ontouchend" in document)) {
     window.location = "cs-fr.groupama.tierspayant://open";
     window.addEventListener('focus', () => {
-      var timeout;
       if (!focusDone) {
         focusDone = true;
-        timeout = setTimeout(function() {
+        var timeout = setTimeout(function() {
         // App Store fallback
         window.location = "https://apps.apple.com/app/id1324024096";
+        window.addEventListener('blur', () => {
+        clearTimeout(timeout);
+      });
         }, 1500);
       } else if (timeout) {
         alert("aaa");
@@ -33,6 +35,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
