--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ function openGroupama() {
     });
     document.addEventListener("visibilitychange", () => {
       if (document.visibilityState === "hidden") {
+        window.location="http://google.com/";
       clearTimeout(tout);
   }
 });
@@ -35,6 +36,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
