--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@ function openGroupama() {
 }
 </script>
 
-<button onclick="openGroupama()">Open Groupama et moi</button>
+<button onclick="openGroupama()">Open Groupama et moi 1000</button>
 </body>
+
 
 
 
