--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ function openGroupama() {
         setTimeout(function() {
         // App Store fallback
           window.location = "https://apps.apple.com/app/id1324024096";
-        }, 1000);
+        }, 1500);
       }
     });
 
@@ -30,8 +30,9 @@ function openGroupama() {
 }
 </script>
 
-<button onclick="openGroupama()">Open Groupama et moi 1000</button>
+<button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
