--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script>
 function openGroupama() {
   const uap = new UAParser();
-  alert(JSON.stringfy(uap.getResult()));
+  alert(JSON.stringify(uap.getResult()));
 
   var focusDone = false;
   var userAgent = navigator.userAgent || navigator.vendor || window.opera;
@@ -36,6 +36,7 @@ function openGroupama() {
 
 <button onclick="openGroupama()">Open Groupama et moi</button>
 </body>
+
 
 
 
